force-app/main/default/objects/Game__c/fields/Away_Team__c.field-meta.xml
<CustomField>
    <fullName>Away_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Away Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Games (Away Team)</relationshipLabel>
    <relationshipName>Games_Away_Team</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>