force-app/main/default/objects/Game__c/fields/Home_Team__c.field-meta.xml
<CustomField>
    <fullName>Home_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Home Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games_Home_Team</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>